--- a/assets/collection-banner.css
+++ b/assets/collection-banner.css
@@ -27,11 +27,7 @@
   display: block;
   image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
-  image-rendering: high-quality;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
+  -ms-interpolation-mode: bicubic;
 }
 
 .collection-banner-placeholder {
